--- a/contact-us.html
+++ b/contact-us.html
@@ -1,3 +1,4 @@
+<!-- HEAD -->
 <head>
   <title>My Health Story</title>
   <meta charset="utf-8">
@@ -8,7 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
+<!-- // HEAD -->
 
+<!-- NAVBAR -->
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
@@ -21,45 +24,47 @@
     <div class="topnav-right">
       <a href="login.html">Login/Sign Up</a>
     </div>
+    </div>
   </div>
 </nav>
+<!-- // NAVBAR -->
 
-
-
-<!-- Body and Map -->
+<!-- CONTACT AND MAP BODY -->
 <body>
   <h1>
-      <p class="title">Contact Us</p>
-      <div class="row">
-          <div class="column-contact">
-            <div class="container-contact"><br>
-                <label class="text-body">Name</label>
-                <input id="name" type="text"><br><br>
-                <label class="text-body">Email</label>
-                <input id="email" type="email"><br><br>
-                <label class="text-body">Inquiry</label><br>
-                <textarea id="inquiry" name="inquiry" rows="4" cols="27"></textarea><br><br>
-                <button onclick="contactUs()">Submit</button>
-                <p id="inquiry-submit"></p>
-            </div>
-            </div>
-          <div class="column-map">
-            <div class="container-map">
-              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=15TOs6OH_dmraOBQr8oZjkPYUN5CS03bb" width="600" height="400px"></iframe>
-            </div>  
-            <p class="contact-myhealthstory">My Health Story<br>535 Watson Drive<br>Claremont, CA 91711<br>(323) 455-4029</p>
-          </div> 
+    <p class="title">Contact Us</p><hr>
+    <div class="row">
+      <div class="column-contact">
+        <div class="container-contact"><br>
+            <label class="text-body">Name</label>
+            <input id="name" type="text"><br><br>
+            <label class="text-body">Email</label>
+            <input id="email" type="email"><br><br>
+            <label class="text-body">Inquiry</label><br>
+            <textarea id="inquiry" name="inquiry" rows="4" cols="27"></textarea><br><br>
+            <button onclick="contactUs()">Submit</button>
+            <p id="inquiry-submit"></p>
+        </div>
+      </div>
+      <div class="column-map">
+        <div class="container-map">
+          <iframe src="https://www.google.com/maps/d/u/0/embed?mid=15TOs6OH_dmraOBQr8oZjkPYUN5CS03bb" width="600" height="400px"></iframe>
+        </div>  
+        <p class="contact-myhealthstory">My Health Story<br>535 Watson Drive<br>Claremont, CA 91711<br>(323) 455-4029</p>
       </div> 
+    </div> 
   </h1>
 </body>
-<!-- // Body and Map -->
+<!-- // CONTACT AND MAP BODY -->
+
 <br><br><br><br>
-<!-- footer -->
+
+<!-- FOOTER -->
 <div class="footer">
   <div class="footer-bottom">
     &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
 </div>
-<!-- // footer -->
+<!-- // FOOTER -->
 
 <script type="text/javascript" src="src/scripts.js"></script>
