--- a/demographics.html
+++ b/demographics.html
@@ -1,3 +1,4 @@
+<!-- HEAD -->
 <head>
   <title>My Health Story</title>
   <meta charset="utf-8">
@@ -8,6 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
+<!-- // HEAD -->
+
+<!-- NAVBAR -->
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
@@ -31,10 +35,12 @@
           <a href="logout.html">Logout</a>
         </div>
     </div> 
+    </div>
   </div>
 </nav>
- 
- <!-- Body and Image -->
+<!-- NAVBAR -->
+
+<!-- DEMO BODY -->
 <body>
     <h1>
       <p class="title">Demographics</p><hr>
@@ -135,7 +141,7 @@
         <input type="tel" id="mobile-phone" name="mobile-phone" placeholder="(555)555-5555" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
       </form>
     </div>
-<hr>
+    <hr>
     <h3>
       <p class="demo-title">Emergency Contact #1</p>
     </h3>
@@ -331,20 +337,21 @@
     </div>
     <hr>
     <div class="myDemo-button">
-    <button onclick="myDemo()">Save</button>
-    <p id="myDemo-save"></p>
+      <button onclick="myDemo()">Save</button>
+      <p id="myDemo-save"></p>
     </div>
     <br>
-
 </body>
-<!-- // Body and Image -->
+<!-- // DEMO BODY -->
+
 <br><br><br>
-<!-- footer -->
+
+<!-- FOOTER -->
 <div class="footer">
   <div class="footer-bottom">
     &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
 </div>
-<!-- // footer -->
+<!-- // FOOTER -->
 
-  <script type="text/javascript" src="src/scripts.js"></script>
+<script type="text/javascript" src="src/scripts.js"></script>
