--- a/overview.html
+++ b/overview.html
@@ -1,3 +1,4 @@
+<!-- HEAD -->
 <head>
   <title>My Health Story</title>
   <meta charset="utf-8">
@@ -8,6 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
+<!-- // HEAD -->
+
+<!-- NAVBAR -->
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
@@ -31,13 +35,15 @@
           <a href="logout.html">Logout</a>
         </div>
     </div> 
+    </div>
   </div>
 </nav>
+<!-- // NAVBAR -->
  
-<!-- Body and Grid -->
+<!-- OVERVIEW GRID -->
 <body>
   <h1>
-    <p class="title">Overview</p>
+    <p class="title">Overview</p><hr>
   </h1>
   <div class="grid">
     <div><img src="images/Schedule-amico.png" alt="" ><a href="appointments.html"  style="font-size: 24px; text-align: center;">Appointments</a></div>
@@ -50,15 +56,16 @@
     <div><img src="images/Personal files-amico.png" alt=""><a href="reports.html" style="font-size: 24px; text-align: center;">Reports</a></div>
   </div> 
 </body>
-  <!-- //Body and grid -->
-  <br>
-  <br>
-    <!-- footer -->
+<!-- // OVERVIEW GRID -->
+
+<br><br>
+
+<!-- FOOTER -->
 <div class="footer">
-    <div class="footer-bottom">
-      &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
-    </div>
+  <div class="footer-bottom">
+    &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
-  <!-- // footer -->
+</div>
+<!-- // FOOTER -->
 
 <script type="text/javascript" src="src/scripts.js"></script>
