--- a/about-us.html
+++ b/about-us.html
@@ -1,3 +1,4 @@
+<!-- HEAD -->
 <head>
   <title>My Health Story</title>
   <meta charset="utf-8">
@@ -8,6 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
+<!-- // HEAD -->
+
+<!-- NAVBAR -->
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
@@ -20,10 +24,12 @@
     <div class="topnav-right">
       <a href="login.html">Login/Sign Up</a>
     </div> 
+    </div>
   </div>
 </nav>
+<!-- // NAVBAR -->
   
-  <!-- Body and Image -->
+<!-- BODY AND IMAGE -->
 <body>
     <h1>
         <p class="title">About Us</p>
@@ -35,25 +41,25 @@
                 <p class="Scott-intro">
                     Scott is a current pre-med student at Keck Graduate Instutite.<br>As an aspiring physician, he hopes to make a positive impact<br>on the world while encouraging his patients to live healthy lives. 
                 </p>
-            </div>
+          </div>
           <div class="column">
             <img class="Joann-image" src="images/IMG_4456.jpeg">
             <p class="Joann">Joann Sy</p>
                 <p class="Joann-intro">
                     Joann is a current pre-med student at Keck Graduate Institute.<br>As an aspiring physician, she hopes improve accessibility to healthcare<br>for all while creating an inclusive space for affirmative care.
                 </p>
-         </div> 
+          </div> 
         </div> 
     </h1>
     </body>
-    <!-- // Body and Image -->
+<!-- // BODY AND IMAGE -->
 
-    <!-- footer -->
+<!-- FOOTER -->
 <div class="footer">
-    <div class="footer-bottom">
-      &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
-    </div>
+  <div class="footer-bottom">
+    &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
-  <!-- // footer -->
+</div>
+<!-- // FOOTER -->
 
-  <script type="text/javascript" src="src/scripts.js"></script>
+<script type="text/javascript" src="src/scripts.js"></script>
