--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- HEAD -->
 <head>
   <title>My Health Story</title>
   <meta charset="utf-8">
@@ -8,6 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
+<!-- // HEAD -->
+
+<!-- NAVBAR -->
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
@@ -20,13 +24,15 @@
     <div class="topnav-right">
       <a href="login.html">Login/Sign Up</a>
     </div> 
+    </div>
   </div>
 </nav>
+<!-- // NAVBAR -->
 
-<!-- Body and Image -->
+<!-- BODY AND IMAGE -->
 <body>
 <h1>
-  <p class="title">My Health Story</p>
+  <p class="title">My Health Story</p><hr>
   <div class="row">
     <div class="column">
       <p class="home-intro">
@@ -45,14 +51,14 @@
   </div>
 </h1>
 </body>
-<!-- // Body and Image -->
+<!-- // BODY AND IMAGE -->
 
-<!-- footer -->
+<!-- FOOTER -->
 <div class="footer">
-    <div class="footer-bottom">
-      &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
-    </div>
+  <div class="footer-bottom">
+    &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
-  <!-- // footer -->
+</div>
+<!-- // FOOTER -->
 
 <script type="text/javascript" src="src/scripts.js"></script>
