--- a/insurance.html
+++ b/insurance.html
@@ -1,3 +1,4 @@
+<!-- HEAD -->
 <head>
   <title>My Health Story</title>
   <meta charset="utf-8">
@@ -8,6 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
+<!-- // HEAD -->
+
+<!-- NAVBAR -->
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
@@ -31,26 +35,28 @@
           <a href="logout.html">Logout</a>
         </div>
     </div> 
+    </div>
   </div>
 </nav>
- 
- <!-- Body and Image -->
+<!-- // NAVBAR -->
+
+<!-- INSURANCE BODY -->
 <body>
-    <h1>
-      <p class="title">Insurance</p>
-    </h1>
-    <br>
-    <div class="insurance-upload">
-      <p class="text-insurance">Upload your insurance card here!</p><br>
-      <form action="/insurance_cards.php">
-        <label for="ins-card">Insurance Company:</label>
-        <input type="text" id="ins-card" name="ins-card"><br><br>
-        <input type="file" id="myFile" name="filename"><br>
-        <label for="ins-card">Insurance Company:</label>
-        <input type="text" id="ins-card" name="ins-card"><br><br>
-        <input type="file" id="myFile" name="filename"><br>
-        <button type="button" onclick="showIns()">Submit</button>
-      </form>
+  <h1>
+    <p class="title">Insurance</p><hr>
+  </h1>
+  <br>
+  <div class="insurance-upload">
+    <p class="text-insurance">Upload your insurance card here!</p><br>
+    <form>
+      <label for="ins-card">Insurance Company:</label>
+      <input type="text" id="ins-card" name="ins-card"><br><br>
+      <input type="file" id="myFile" name="filename"><br>
+      <label for="ins-card">Insurance Company:</label>
+      <input type="text" id="ins-card" name="ins-card"><br><br>
+      <input type="file" id="myFile" name="filename"><br>
+      <button type="button" onclick="showIns()">Submit</button>
+    </form>
   </div>
   <hr>
   <div id="container-ins" class= "container-ins">
@@ -62,22 +68,22 @@
       </div>
       </div>
     </div>
-      <div class="column-ins-2">
-        <div class="ins-content">
-        <p>Medi-Cal Insurance Card</p>
-        <img class="insurance-upload-complete" src="images/24737_02_newBIC_web.png">
-        </div>
-      </div>  
+    <div class="column-ins-2">
+      <div class="ins-content">
+      <p>Medi-Cal Insurance Card</p>
+      <img class="insurance-upload-complete" src="images/24737_02_newBIC_web.png">
+      </div>
+    </div>  
   </div>
 </body>
-<!-- // Body and Image --> 
+<!-- // INSURANCE BODY -->
 
-  <!-- footer -->
+<!-- footer -->
 <div class="footer">
-    <div class="footer-bottom">
-      &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
-    </div>
+  <div class="footer-bottom">
+    &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
-  <!-- // footer -->
+</div>
+<!-- // footer -->
 
 <script type="text/javascript" src="src/scripts.js"></script>
