--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!-- NAVBAR -->
+<!-- HEAD -->
 <head>
   <title>My Health Story</title>
   <meta charset="utf-8">
@@ -9,7 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
+<!-- //HEAD -->
 
+<!-- NAVBAR -->
 <nav class="navbar navar-fixed-top">
   <span class="navbar-brand">
     <img class="navbar-logo" src="images/myHealthStory-logo.jpg">
@@ -22,55 +24,61 @@
     <div class="topnav-right">
       <a class="active-tab" href="login.html">Login/Sign Up</a>
     </div>
+    </div>
   </div>
 </nav>
-
 <!--// NAVBAR -->
-<!-- LOGIN -->
-<div class="form-wrap">
-  <div class="tabs">
-    <h3 class="signup-tab"><a class="active" href="#signup-tab-content">Sign Up</a></h3>
-    <h3 class="login-tab"><a href="#login-tab-content">Login</a></h3>
-  </div><!--.tabs-->
 
-  <div class="tabs-content">
-    <div id="signup-tab-content" class="active">
-      <form class="signup-form" action="overview.html" method="post">
-        <input type="email" class="input" id="user_email" autocomplete="off" placeholder="Email">
-        <input type="text" class="input" id="user_name" autocomplete="off" placeholder="Username">
-        <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
-      </form><!--.login-form-->
-      <a href="overview.html"><button class="login-button" value="signup">Sign Up</button></a>
-      <div class="help-text">
-        <p>By signing up, you agree to our</p>
-        <p><a href="#">Terms of service</a></p>
-      </div><!--.help-text-->
-    </div><!--.signup-tab-content-->
+<!-- LOGIN BODY -->
+<body>
+  <h1>
+    <p class="title">Login/Sign Up</p><hr>
+  </h1>
+  <div class="form-wrap">
+    <div class="tabs">
+      <h3 class="signup-tab"><a class="active" href="#signup-tab-content">Sign Up</a></h3>
+      <h3 class="login-tab"><a href="#login-tab-content">Login</a></h3>
+    </div><!--.tabs-->
 
-    <div id="login-tab-content">
-      <form class="login-form" action="" method="post">
-        <input type="text" class="input" id="user_login" autocomplete="off" placeholder="Email or Username">
-        <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
-        <div class="help-text"><p>
-          <input type="checkbox" class="checkbox" id="remember_me">
-          <label for="remember_me">Remember me</label></p>
-        </div>
-      </form><!--.login-form-->
-      <a href="overview.html"><button class="login-button" value="login">Login</button></a>
-      <div class="help-text">
-        <p><a href="#">Forget your password?</a></p>
-      </div><!--.help-text-->
-    </div><!--.login-tab-content-->
-  </div><!--.tabs-content-->
-</div><!--.form-wrap-->
-<!-- // LOGIN -->
+    <div class="tabs-content">
+      <div id="signup-tab-content" class="active">
+        <form class="signup-form" action="overview.html" method="post">
+          <input type="email" class="input" id="user_email" autocomplete="off" placeholder="Email">
+          <input type="text" class="input" id="user_name" autocomplete="off" placeholder="Username">
+          <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
+        </form><!--.login-form-->
+        <a href="overview.html"><button class="login-button" value="signup">Sign Up</button></a>
+        <div class="help-text">
+          <p>By signing up, you agree to our</p>
+          <p><a href="#">Terms of service</a></p>
+        </div><!--.help-text-->
+      </div><!--.signup-tab-content-->
 
-    <!-- footer -->
+      <div id="login-tab-content">
+        <form class="login-form" action="" method="post">
+          <input type="text" class="input" id="user_login" autocomplete="off" placeholder="Email or Username">
+          <input type="password" class="input" id="user_pass" autocomplete="off" placeholder="Password">
+          <div class="help-text"><p>
+            <input type="checkbox" class="checkbox" id="remember_me">
+            <label for="remember_me">Remember me</label></p>
+          </div>
+        </form><!--.login-form-->
+        <a href="overview.html"><button class="login-button" value="login">Login</button></a>
+        <div class="help-text">
+          <p><a href="#">Forget your password?</a></p>
+        </div><!--.help-text-->
+      </div><!--.login-tab-content-->
+    </div><!--.tabs-content-->
+  </div><!--.form-wrap-->
+</body>
+<!-- // LOGIN BODY -->
+
+<!-- FOOTER -->
 <div class="footer">
   <div class="footer-bottom">
     &copy; myhealthstory.com | Designed by Scott Atkinson & Joann Sy 
   </div>
 </div>
-<!-- // footer -->
+<!-- // FOOTER -->
 
 <script type="text/javascript" src="src/scripts.js"></script>
